# vespa-search

./: .gitignore  Cargo.toml  Dockerfile  HIGH_LEVEL_DESIGN.md  PLAN.md  README.md  fly.toml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: Cargo.toml  Dockerfile  fly.backend.toml  fly.toml
backend/src/: main.rs
docs/: ARCHITECTURAL_DOCUMENT.md  ARCHITECTURAL_REQUIREMENTS.md  ARCHITECTURAL_SPECIFICATION.md  DETAILED_DESIGN.md
frontend/: next.config.js  package.json
frontend/pages/: index.js  repo.js
frontend/pages/repos/: [id].js
frontend/styles/: globals.css
scripts/: build_vespa_application_zip.sh  quick_commit_push.sh
src/: main.rs
vespa/application/: README.md  hosts.xml  services.xml
vespa/application/schemas/: codesearch.sd
vespa/application/security/: client.pem  clients.pem
